# fwfii

./: .gitignore  Emergency_test.py  LICENSE  README.md  fly_no_carpet.py  mission_takeoff.py  monitor_position.py  pyproject.toml  setup.py  test.py  test_battery_fix.py  test_flight_viewer.py  test_tcp_fly.py  test_tcp_mini.py
.github/workflows/: ci.yml
EGG-INFO/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docs/: audit.md  pyfii-integration.md
examples/: beginner_guide.py  connect_and_fly.py  emergency_land.py  emergency_stop.py  flip.py  fly_no_carpet.py  fly_with_carpet.py  led_test.py  monitor_position.py
examples/01_basics/: emergency_land.py  emergency_stop.py  hello_drone.py  monitor_position.py
examples/02_carpet_flight/: fly_no_carpet.py  multi_point_flight.py  trajectory_collect.py
examples/03_mission/: compile_and_upload.py
examples/04_swarm/: dance_duet.py
examples/05_utils/: connect_and_fly.py  position_viewer_demo.py  test_battery.py
examples/07_complete_swarm/: build_and_deploy.py  triangle_formation.py
examples/mission/: mission.py  mission_upload.py
examples/missions/: square_mission.py
fwfii/: __init__.py  fii_exporter.py  gtrfs_compat.py  offline_multi.py  pyfii_bridge.py  quick.py  runtime.py  swarm.py  test2.py  test3.py  test4-ok.py  test5.py  test6.py
fwfii.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
fwfii/atom/: __init__.py  delivery.py  (+2 more)
tests/: conftest.py  test_import.py  test_mission.py  test_protocol.py  test_runtime.py  test_transports.py
文档+示例脚本/: EmergencyStop.py  F600&F400Python接口文档.xlsx  Takeoff_Land.py  Takeoff_Land_offline.py  mission_start.py  testsocket.py  ~$F600&F400Python接口文档.xlsx
(+69 files in other folders)
