[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fwfii"
version = "1.0.1"
description = "Low-level SDK for Fii F400/F600 educational drones"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "fwfii maintainers"}]
keywords = ["drone", "flight-control", "education", "fii", "f400", "f600"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
]
dependencies = []

[project.optional-dependencies]
serial = ["pyserial>=3.5"]
monitor = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=2.0",
    "windows-curses>=2.3; platform_system == 'Windows'",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.5",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/Xing-yuyu/fwfii"
Source = "https://github.com/Xing-yuyu/fwfii"

[tool.setuptools.packages.find]
include = ["fwfii*"]
exclude = ["examples*", "tests*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_ignores = true
disable_error_code = ["var-annotated"]
